--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
   <h1 class="page-heading">cjdesch.com </h1>
 
-  <p>Hi, I'm Chris. Welcome to my website. Please email me at <a href="mailto:&#109;&#101;&#064;&#099;&#106;&#100;&#101;&#115;&#099;&#104;&#046;&#099;&#111;&#109;">me <at> cjdesch.com</a> </p>
+  <p>Hi, I'm Chris. Welcome to my website. Please email me at <a href="mailto:&#109;&#101;&#064;&#099;&#106;&#100;&#101;&#115;&#099;&#104;&#046;&#099;&#111;&#109;">&#109;&#101;&#064;&#099;&#106;&#100;&#101;&#115;&#099;&#104;&#046;&#099;&#111;&#109;</a> </p>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
